--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a {
 }
 
 a:hover {
-  color: #2eca6a;
+  color: #4b5cff;
   text-decoration: none;
 }
 
@@ -90,8 +90,12 @@ a:hover {
   color: #000000;
 }
 
+.color-r {
+  color: #4b5cff;
+}
+
 .color-b {
-  color: #2eca6a;
+  color: #4b5cff;
 }
 
 .color-d {
@@ -125,7 +129,7 @@ a:hover {
   bottom: -1px;
   width: 100%;
   height: 2px;
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   z-index: 2;
 }
 
@@ -177,7 +181,7 @@ a:hover {
 .pagination-a .pagination .page-link:hover,
 .pagination-a .pagination .page-link:active,
 .pagination-a .pagination .page-link:focus {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .pagination-a .pagination .page-link span {
@@ -204,11 +208,11 @@ a:hover {
 }
 
 .pagination-a .pagination .page-item.active .page-link {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .a {
-  color: #2eca6a;
+  color: #4b5cff;
   font-size: 1.3rem;
 }
 
@@ -292,7 +296,7 @@ a:hover {
   position: absolute;
   width: 70px;
   height: 4px;
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   bottom: 20px;
   left: 0;
 }
@@ -359,11 +363,11 @@ a:hover {
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   width: 35px;
 }
 
@@ -413,7 +417,7 @@ a:hover {
   display: inline-block;
   transition: all 0.6s ease-in-out;
   color: #ffffff;
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   opacity: .9;
 }
 
@@ -443,7 +447,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #2eca6a;
+  background: #4b5cff;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -481,7 +485,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #2eca6a;
+  border-top: 6px solid #4b5cff;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -571,7 +575,7 @@ a:hover {
   width: 100%;
   height: 2px;
   z-index: 0;
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transform-origin: right;
@@ -607,7 +611,7 @@ a:hover {
 }
 
 .navbar-default.navbar-trans .nav-link:before {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .navbar-default.navbar-trans .nav-link:hover {
@@ -632,7 +636,7 @@ a:hover {
 }
 
 .navbar-default.navbar-reduce .nav-link:before {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .navbar-default.navbar-reduce .nav-link:hover {
@@ -652,7 +656,7 @@ a:hover {
 
 .navbar-default .dropdown .dropdown-menu {
   border-top: 0;
-  border-left: 4px solid #2eca6a;
+  border-left: 4px solid #4b5cff;
   border-right: 0;
   border-bottom: 0;
   -webkit-transform: translate3d(0px, -40px, 0px);
@@ -675,13 +679,13 @@ a:hover {
 
 .navbar-default .dropdown .dropdown-menu .dropdown-item:hover {
   background-color: #ffffff;
-  color: #2eca6a;
+  color: #4b5cff;
   transition: all 500ms ease;
 }
 
 .navbar-default .dropdown .dropdown-menu .dropdown-item.active {
   background-color: #ffffff;
-  color: #2eca6a;
+  color: #4b5cff;
 }
 
 .navbar-default .dropdown:hover .dropdown-menu {
@@ -877,11 +881,11 @@ a:hover {
 }
 
 .intro .owl-theme .owl-dots .owl-dot:hover span {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .intro .owl-theme .owl-dots .owl-dot.active span {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .intro .intro-item {
@@ -908,7 +912,7 @@ a:hover {
 .intro .intro-body .price-a {
   color: #ffffff;
   padding: 1rem 1.5rem;
-  border: 2px solid #2eca6a;
+  border: 2px solid #4b5cff;
   border-radius: 50px;
   text-transform: uppercase;
   letter-spacing: 0.030em;
@@ -958,7 +962,7 @@ a:hover {
 }
 
 .intro-single .title-single-box {
-  border-left: 3px solid #2eca6a;
+  border-left: 3px solid #4b5cff;
 }
 
 .intro-single .title-single-box .title-single {
@@ -1060,7 +1064,7 @@ a:hover {
 .price-a {
   color: #ffffff;
   padding: .6rem .8rem;
-  border: 2px solid #2eca6a;
+  border: 2px solid #4b5cff;
   border-radius: 50px;
   text-transform: uppercase;
   letter-spacing: 0.030em;
@@ -1070,7 +1074,7 @@ a:hover {
   width: 100%;
   position: absolute;
   z-index: 2;
-  background-color: #2eca6a;
+  background-color: #4b5cff;
 }
 
 .card-info {
@@ -1167,7 +1171,7 @@ a:hover {
 
 .card-header-b .category-b {
   font-size: .9rem;
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   padding: .3rem .7rem;
   color: #313131;
   letter-spacing: 0.030em;
@@ -1218,7 +1222,7 @@ a:hover {
 
 .post-content .blockquote {
   padding: 1rem 3rem 1.7rem 3rem;
-  border-left: 3px solid #2eca6a;
+  border-left: 3px solid #4b5cff;
   color: #000000;
 }
 
@@ -1305,7 +1309,7 @@ a:hover {
 
 .card-box-ico {
   padding: 1rem 3rem 1rem 2.5rem;
-  border: 5px solid #2eca6a;
+  border: 5px solid #4b5cff;
 }
 
 .card-box-ico span {
@@ -1432,7 +1436,7 @@ a:hover {
 }
 
 .sinse-box {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   padding: 1rem 2rem;
   position: absolute;
   left: 15px;
@@ -1486,7 +1490,7 @@ a:hover {
 
 .testimonial-ico span {
   font-size: 1.8rem;
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   color: #ffffff;
   padding: .4rem 1rem;
   border-radius: 50px;
@@ -1543,7 +1547,7 @@ a:hover {
 .section-footer .item-list-a i {
   font-size: 18px;
   padding-right: 4px;
-  color: #2eca6a;
+  color: #4b5cff;
 }
 
 .section-footer .widget-a .w-title-a {
@@ -1570,8 +1574,8 @@ footer .credits {
 ======================================*/
 
 .form-a #sendmessage {
-  color: #2eca6a;
-  border: 1px solid #26a356;
+  color: #4b5cff;
+  border: 1px solid #4b5cff;
   display: none;
   text-align: center;
   padding: 15px;
@@ -1624,7 +1628,7 @@ footer .credits {
 
 .form-a .form-control:focus {
   box-shadow: none;
-  border-color: #2eca6a;
+  border-color: #4b5cff;
 }
 
 /*======================================
@@ -1648,12 +1652,12 @@ footer .credits {
 }
 
 .btn.btn-a:hover {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   color: #000000;
 }
 
 .btn.btn-b {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   color: #000000;
 }
 
@@ -1663,7 +1667,7 @@ footer .credits {
 }
 
 .btn.btn-b-n {
-  background-color: #2eca6a;
+  background-color: #4b5cff;
   color: #ffffff;
   border-radius: 0;
 }
@@ -1719,7 +1723,7 @@ footer .credits {
   }
 
   .navbar-default .dropdown .dropdown-menu {
-    border-top: 4px solid #2eca6a;
+    border-top: 4px solid #4b5cff;
     border-left: 0;
     display: block;
     position: absolute;
