fix nav-brand color

--- a/css/style.css
+++ b/css/style.css
@@ -666,7 +666,7 @@ p {
 }
 
 .navbar-default.navbar-reduce .navbar-brand {
-  color: #000000;
+  color: #4b5cff;
 }
 
 .navbar-default .dropdown .dropdown-menu {
